# cuddly-tribble

./: .gitignore  CMakeLists.txt  README.md  config.ini  justfile  shell.nix
.github/: CODEOWNERS
assets/: example.ini
preferences/: keybinds.ini
src/: config.cpp  config.h  main.cpp
src/engine/: engine.cpp  engine.hpp
src/engine/entity/: entity.cpp  entity.hpp  input_mixin.hpp
src/engine/entityManager/: entityManager.cpp  entityManager.hpp
src/engine/input/: input.hpp  keybinds.cpp  keybinds.hpp  keyboard.cpp  keyboard.hpp
src/engine/renderer/: renderer.cpp  renderer.hpp
src/engine/structures/: structs.hpp
src/gameObjects/: player.cpp  player.hpp
src/utils/config/: config.cpp  config.hpp
src/utils/parser/mini/: ini.h
